# rsync-wrapper

./: README.md  pyproject.toml
rsync_wrapper/: __init__.py  __main__.py  error_codes.py  parser.py  process.py  types.py  utils.py
tests/: test_error_code.py  test_parser.py  test_process.py  test_rsync_wrapper.py
