[tool.poetry]
name = "rsync-wrapper"
version = "0.1.0"
description = ""
authors = ["meirdev <maornet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.4.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.960"
black = "^22.3.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
